--- a/web/offwhite/style.css
+++ b/web/offwhite/style.css
@@ -746,7 +746,7 @@ a.scope { /* scope */                   color: dodgerblue; font-weight: bold; pa
 #results {
 }
 
-#results p { /* pagetitle and slider */
+#results p, #revisions p { /* pagetitle and slider */
 	padding: 0.5em;
 }
 
@@ -782,14 +782,14 @@ a.scope { /* scope */                   color: dodgerblue; font-weight: bold; pa
 	font-weight: bold;
 }
 
-#results .sel { /* slider item for the shown search result page */
+#results .sel, #revisions .sel { /* slider item for the shown search result page */
 	background-color: #d6d6c0;
 	border: 1px #998 solid;
 	padding: .5em;
 	margin: 1px;
 }
 
-#results .more { /* slider item for the n-th search result page */
+#results .more, #revisions .more { /* slider item for the n-th search result page */
 	border: 1px #bba solid;
 	padding: .3em;
 	margin: 1px;
