--- a/web/httpheader.jspf
+++ b/web/httpheader.jspf
@@ -83,6 +83,11 @@ if (cfg.getPrefix().equals(Prefix.HIST_L)) {
 <script type="text/javascript" src="<%=ctxPath%>/jquery.tooltip-1.3.pack.js"></script>
 <%--<script type="text/javascript" src="<%=ctxPath%>/jquery.autocomplete-1.1.pack.js"></script> --%>
 <script type="text/javascript" src="<%=ctxPath%>/utils.js"></script>
+<script type="text/javascript">
+    $(document).ready(function() {
+       $("#content") .scroll(on_scroll);
+    });
+</script>
 <title><%=cfg.getTitle()%></title><%
     out.write(cfg.getHeaderData());
 %>
