--- a/web/offwhite/print.css
+++ b/web/offwhite/print.css
@@ -98,6 +98,10 @@ label {
     display: none;
 }
 
+.projects .subrepository {
+    padding-left: 20px;
+}
+
 /* ############### start of header ############## */
 #whole_header {
 	display: none;
