--- a/web/default/style.css
+++ b/web/default/style.css
@@ -626,11 +626,12 @@ div[id^='src'] pre {
 	margin: 0;
 }
 
-div[id^='src'] .l-hide, #src .hl-hide, .blame-hidden { /* hidden line number/annotation block */
+/* hidden line number/annotation block */
+.lines-hidden .l, .lines-hidden .hl, .blame-hidden .blame {
 	display: none
 }
 
-div[id^='src'] .l, div[id^='src'] .hl, .blame .r, .blame .a,
+.l, .hl, .blame .r, .blame .a,
 #results .l, #more .l,
 #difftable i, del.d { /* line number/annotation block */
 	display: inline-block;
