Fix for https://github.com/OpenGrok/OpenGrok/issues/1076 New feature to allow users to collapse and expand long revision messages on the history page.

--- a/web/default/style.css
+++ b/web/default/style.css
@@ -493,6 +493,10 @@ table#revisions tbody tr td p {
 	margin: 1ex 0;
 }
 
+.rev-message-hidden {
+  display: none;
+}
+
 
 /* *** diff page *** */
 #diffbar { /* diff navbar: contains the tabs to select diff format */
