Moving toggle revision to domReadyHistory. Copying css rules to offwhite and polised styles.

--- a/web/polished/style.css
+++ b/web/polished/style.css
@@ -560,11 +560,33 @@ table#revisions {
         color: #755;
 }
 
+table#revisions tbody tr td p {
+	-ms-word-break: break-all;
+	-ms-word-wrap: break-all;
+	-webkit-word-break: break-word;
+	-webkit-word-wrap: break-word;
+	word-break: break-word;
+	word-wrap: break-word;
+	-webkit-hyphens: auto;
+	-moz-hyphens: auto;
+	-ms-hyphens: auto;
+	hyphens: auto;
+}
+
+@-moz-document url-prefix() {
+    table#revisions tbody tr td p {
+        word-break: break-all;
+    }
+}
+
+.rev-message-hidden {
+  display: none;
+}
+
 .rssbadge { /* RSS/XML Feed on history page */
 	text-align: right;
 	margin: 1ex 0;
 }
-
 
 /* *** diff page *** */
 #diffbar { /* diff navbar: contains the tabs to select diff format */
