--- a/web/repos.jspf
+++ b/web/repos.jspf
@@ -40,13 +40,14 @@ Copyright (c) 2015, 2016, Oracle and/or its affiliates. All rights reserved.
 <%@page import="org.opensolaris.opengrok.web.PageConfig"%>
 <%
 {
+    PageConfig cfg = PageConfig.get(request);
     Comparator<RepositoryInfo> comparatorRepo = new Comparator<RepositoryInfo>() {
         public int compare(RepositoryInfo r1, RepositoryInfo r2) {
             return r1.getDirectoryName().compareTo(r2.getDirectoryName());
         }
     };
     
-    ProjectHelper pHelper = ProjectHelper.getInstance(cfg);
+    ProjectHelper pHelper = cfg.getProjectHelper();
     if (pHelper.getAllProjects().size() > 0) {
         Set<Group> groups = pHelper.getGroups();
         Set<Project> repositories = pHelper.getUngroupedRepositories();
@@ -66,11 +67,10 @@ Copyright (c) 2015, 2016, Oracle and/or its affiliates. All rights reserved.
             <%
             LinkedList<Group> stack = new LinkedList<Group>();
             for ( Group x : groups ) {
-                if(x.getParent() != null) {
-                    continue;
+                if(x.getParent() == null && (pHelper.hasAllowedSubgroup(x) || cfg.isAllowed(x))) {
+                    x.setFlag(0);
+                    stack.addLast(x);
                 }
-                x.setFlag(0);
-                stack.addLast(x);
             }
             
             while ( ! stack.isEmpty() ) {
@@ -86,9 +86,11 @@ Copyright (c) 2015, 2016, Oracle and/or its affiliates. All rights reserved.
                 
                 stack.element().setFlag(1);
                 
-                for ( Group x : group.getSubgroups()) {
-                    x.setFlag(0);
-                    stack.addFirst(x);
+                for ( Group x : pHelper.getSubgroups(group)) {
+                    if(cfg.isAllowed(x) || pHelper.hasAllowedSubgroup(x)) {
+                        x.setFlag(0);
+                        stack.addFirst(x);
+                    }
                 }
                 
                 %><div class="panel">
@@ -96,9 +98,10 @@ Copyright (c) 2015, 2016, Oracle and/or its affiliates. All rights reserved.
                         
                         <h2><span class="name"><%= Util.htmlize(group.getName()) %></span> <small>[<a href="#" class="projects_select_all">select all</a>]</small></h2>
                     </div>
-                    <div class="panel-body-accordion">
+                        <div class="panel-body-accordion <% if(pHelper.hasFavourite(group)) { %>favourite<% } %>"
+                        <% if(pHelper.hasFavourite(group)) { %>data-accordion-visible="true"<% } %>>
                 <%
-                if(group.getRepositories().size() > 0 ) {
+                if(pHelper.getRepositories(group).size() > 0 ) {
                 %>
                     <table>
                     <thead>
@@ -110,7 +113,7 @@ Copyright (c) 2015, 2016, Oracle and/or its affiliates. All rights reserved.
                     </thead>
                     <tbody>
                     <%
-                    for ( Project project : group.getRepositories()) {
+                    for ( Project project : pHelper.getRepositories(group)) {
                         List<RepositoryInfo> repos = pHelper.getRepositoryInfo(project);
                         String projDesc = project.getDescription();
                         Integer cnt = 0;
@@ -150,13 +153,13 @@ Copyright (c) 2015, 2016, Oracle and/or its affiliates. All rights reserved.
 
                     %></tbody>
                     </table><%
-                } else if ( group.getRepositories().size() <= 0 && group.getSubgroups().size() <= 0 ) {
+                } else if ( pHelper.getRepositories(group).size() <= 0 && !pHelper.hasAllowedSubgroup(group) ) {
                     %>No projects<%
                 }
             }
             %></div><%
-        }    
-    
+        }
+
         // print the rest of projects which don't have a group
         if (repositories.size() > 0) { %>
             <div class="panel-group projects">
@@ -178,7 +181,8 @@ Copyright (c) 2015, 2016, Oracle and/or its affiliates. All rights reserved.
                             </h2>
                         </div>
                     <% } %>
-                    <div class="panel-body<% if(groups.size() > 0) {%>-accordion<% } %>">
+                    <div class="panel-body<% if(groups.size() > 0) {%>-accordion<% } %> <% if(pHelper.hasUngroupedFavourite()) { %>favourite<% } %>"
+                        <% if(pHelper.hasUngroupedFavourite()) { %>data-accordion-visible="true"<% } %>">
                         <table>
                             <thead>
                         <tr>
@@ -189,7 +193,7 @@ Copyright (c) 2015, 2016, Oracle and/or its affiliates. All rights reserved.
                             </thead>
                             <tbody>
                         <%
-                        for ( Project proj : repositories) {
+                        for (Project proj : repositories) {
                             List<RepositoryInfo> repos = pHelper.getRepositoryInfo(proj);
                             String projDesc = proj.getDescription();
                             Integer cnt = 0;
