disable scopes on unsopported files, don't show scope UI if scopes are not available

--- a/web/polished/style.css
+++ b/web/polished/style.css
@@ -1056,7 +1056,7 @@ span.scope-signature {
 }
 
 div#scope {
-    width: 100%;
+    display: none;
     min-height: 1em;
     text-align: left;
     background-color: #dddddd;
