--- a/web/offwhite/style.css
+++ b/web/offwhite/style.css
@@ -978,7 +978,7 @@ span.scope-signature {
 }
 
 div#scope {
-    width: 100%;
+    display: none;
     min-height: 1em;
     text-align: left;
     background-color: #dddddd;
