--- a/web/menu.jspf
+++ b/web/menu.jspf
@@ -51,6 +51,13 @@ org.opensolaris.opengrok.web.Util"
     if (projects == null) {
         projects = new TreeSet<>();
     }
+    int projectsSize = ph.getAllUngrouped().size();
+    if(ph.getGroups().size() > 0 && ph.getAllUngrouped().size() > 0)
+        projectsSize++;
+    for (Group group : ph.getGroups()) {
+        projectsSize++;
+        projectsSize += ph.getAllGrouped(group).size();
+    }
     TreeMap<String, String> pMap = new TreeMap<>();
     QueryBuilder queryParams = cfg.getQueryBuilder();
     if (projects.size() != 0) {
@@ -172,7 +179,7 @@ org.opensolaris.opengrok.web.Util"
     <select tabindex="8" ondblclick="javascript: goFirstProject(event);"
         onkeyup="javascript: checkEnter(event);" class="q" id="project"
         name="project" multiple="multiple" size="<%=
-        Math.min(15, projects.size()) %>"><%
+        Math.min(15, projectsSize) %>"><%
         SortedSet<String> pRequested = cfg.getRequestedProjects();
         for ( Group group : ph.getGroups() ) {
             Set<Project> groupProjects = ph.getAllGrouped(group);
@@ -193,7 +200,7 @@ org.opensolaris.opengrok.web.Util"
             }
         }
   
-        if(ph.getGroups().size() > 0) {
+        if(ph.getGroups().size() > 0 && ph.getAllUngrouped().size() > 0) {
             %><optgroup label="Other"><%
         }
         for ( Project p : ph.getAllUngrouped()) {
@@ -203,7 +210,7 @@ org.opensolaris.opengrok.web.Util"
             }
             %>><%= Util.formQuoteEscape(p.getDescription()) %></option><%
         }
-        if(ph.getGroups().size() > 0) {
+        if(ph.getGroups().size() > 0 && ph.getAllUngrouped().size() > 0) {
             %></optgroup><%
         }
 
