--- a/web/httpheader.jspf
+++ b/web/httpheader.jspf
@@ -78,12 +78,12 @@ if (cfg.getPrefix().equals(Prefix.HIST_L)) {
 <link rel="search" href="<%=ctxPath%>/opensearch"
     type="application/opensearchdescription+xml"
     title="OpenGrok Search for current project(s)" />
-<script type="text/javascript" src="<%=ctxPath%>/jquery-3.1.0.min.js"></script>
-<script type="text/javascript" src="<%=ctxPath%>/jquery-ui-1.12.0-custom.min.js"></script>
-<script type="text/javascript" src="<%=ctxPath%>/jquery.tablesorter-2.26.6.min.js"></script>
-<script type="text/javascript" src="<%=ctxPath%>/tablesorter.parsers.js"></script>
-<%--<script type="text/javascript" src="<%=ctxPath%>/jquery.autocomplete-1.1.pack.js"></script> --%>
-<script type="text/javascript" src="<%=ctxPath%>/utils.js"></script>
+<script type="text/javascript" src="<%=ctxPath%>/js/jquery-3.1.0.min.js"></script>
+<script type="text/javascript" src="<%=ctxPath%>/js/jquery-ui-1.12.0-custom.min.js"></script>
+<script type="text/javascript" src="<%=ctxPath%>/js/jquery.tablesorter-2.26.6.min.js"></script>
+<script type="text/javascript" src="<%=ctxPath%>/js/tablesorter.parsers.js"></script>
+<%--<script type="text/javascript" src="<%=ctxPath%>/js/jquery.autocomplete-1.1.pack.js"></script> --%>
+<script type="text/javascript" src="<%=ctxPath%>/js/utils.js"></script>
 <title><%=cfg.getTitle()%></title><%
     out.write(cfg.getHeaderData());
 %>
