--- a/web/default/style.css
+++ b/web/default/style.css
@@ -425,9 +425,8 @@ input.submit { /* start search button , clear button */
     left: 0;
     right: 0;
     overflow: auto;
-    padding: 1ex; /* should be the same as body's margin */
+    padding: 0 1ex 1ex 1ex; /* should be the same as body's margin */
 }
-
 
 /* *** help page *** */
 #help h4 {
