--- a/web/polished/style.css
+++ b/web/polished/style.css
@@ -916,6 +916,29 @@ a.scope            { /* scope              */ color: dodgerblue; font-weight: bo
     background-color: rgb(255, 215, 0);
 }
 
+.messages-window {
+    position: absolute;
+    width: 40%;
+    max-height: 400px;
+    overflow: auto;
+    z-index: 10;
+    font-size: 12px;
+    font-family: monospace;
+}
+
+.important-note {
+    background-color: rgb(255, 141, 96);
+    text-align: center;
+    display: inline-block;
+    max-height: 100%;
+}
+
+.important-note.important-note-rounded {
+    border-radius: 50%;
+    max-width: 100%;
+    min-width: 20px;
+}
+
 /**** DIFF NAVIGATION/JUMPER *****/
 
 .diff_navigation_style {
@@ -1164,6 +1187,93 @@ div#scope {
 
 .fold {
     vertical-align: central;
+}
+
+/** --------------- application messages ------------ */
+
+.message-group {
+    padding-left: 0;
+    margin: 0 2em 0 2em;
+}
+
+.message-group.limited {
+    max-height: 125px;
+    overflow-y: auto;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.message-group-item {
+    position: relative;
+    display: block;
+    padding: 2px 10px;
+    margin-left: 1%;
+    margin-right: 1%;
+    background-color: #fff;
+    margin-bottom: 3px;
+}
+
+.message-group.limited .message-group-item {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.message-group-item:first-child {
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+}
+
+.message-group-item:last-child {
+    margin-bottom: 0;
+    border-bottom-right-radius: 4px;
+    border-bottom-left-radius: 4px;
+}
+
+.message-group-item.disabled,
+.message-group-item.disabled:hover,
+.message-group-item.disabled:focus {
+    color: #777;
+    cursor: not-allowed;
+    background-color: #eee;
+}
+
+.message-group-item.active,
+.message-group-item.active:hover,
+.message-group-item.active:focus {
+    z-index: 2;
+    color: #fff;
+    background-color: #337ab7;
+    border-color: #337ab7;
+}
+
+.message-group-item.success {
+    color: #3c763d;
+    background-color: #dff0d8;
+}
+
+.message-group-item.info {
+    color: #31708f;
+    background-color: #d9edf7;
+}
+
+.message-group-item.warning {
+    color: #8a6d3b;
+    background-color: #fcf8e3;
+}
+
+.message-group-item.error {
+    color: #a94442;
+    background-color: #f2dede;
+}
+
+.message-group-item-heading {
+    margin-top: 0;
+    margin-bottom: 5px;
+}
+
+.message-group-item-text {
+    margin-bottom: 0;
+    line-height: 1.3;
 }
 
 /** --------------- quick pull class ------------ */
