--- a/web/repos.jspf
+++ b/web/repos.jspf
@@ -21,8 +21,13 @@ CDDL HEADER END
 Copyright (c) 2015, 2016, Oracle and/or its affiliates. All rights reserved.
 
 --%>
-<script src="<%=request.getContextPath()%>/js/repos.js" type="text/javascript"></script>
+<%@page import="org.opensolaris.opengrok.configuration.messages.Message"%>
+<%@page import="java.util.SortedSet"%>
+<%@page import="java.util.SortedSet"%>
 <%@page import="java.util.Set"%>
+<%@page import="java.text.ParseException"%>
+<%@page import="java.util.ArrayList"%>
+<%@page import="java.util.Date"%>
 <%@page import="org.opensolaris.opengrok.web.Prefix"%>
 <%@page import="org.opensolaris.opengrok.web.ProjectHelper"%>
 <%@page import="java.util.LinkedList"%>
@@ -38,9 +43,13 @@ Copyright (c) 2015, 2016, Oracle and/or its affiliates. All rights reserved.
 <%@page import="org.opensolaris.opengrok.configuration.Group"%>
 <%@page import="java.util.List"%>
 <%@page import="org.opensolaris.opengrok.web.PageConfig"%>
+<script src="<%=request.getContextPath()%>/js/repos.js" type="text/javascript"></script>
 <%
 {
     PageConfig cfg = PageConfig.get(request);
+
+    Util.printMessages(out, cfg.getMessages());
+
     Comparator<RepositoryInfo> comparatorRepo = new Comparator<RepositoryInfo>() {
         public int compare(RepositoryInfo r1, RepositoryInfo r2) {
             return r1.getDirectoryName().compareTo(r2.getDirectoryName());
@@ -143,6 +152,12 @@ Copyright (c) 2015, 2016, Oracle and/or its affiliates. All rights reserved.
                        title="Xref for project <%= Util.htmlize(projDesc) %>">
                         <%= Util.htmlize(projDesc) %>
                     </a>
+                    <%
+                        SortedSet<Message> messages = cfg.getEnv().getMessages(project.getDescription());
+                    %>
+                    <% if(!messages.isEmpty()) { %>
+                        <span class="important-note important-note-rounded" data-messages='<%= Util.messagesToJson(messages).toJSONString() %>'>!</span>
+                    <% } %>
                                 </td><%
                             String parent = ri.getParent();
                             if (parent == null) {
@@ -230,6 +245,12 @@ Copyright (c) 2015, 2016, Oracle and/or its affiliates. All rights reserved.
                        title="Xref for project <%= Util.htmlize(projDesc) %>">
                         <%= Util.htmlize(projDesc) %>
                     </a>
+                    <%
+                        SortedSet<Message> messages = cfg.getEnv().getMessages(proj.getDescription());
+                    %>
+                    <% if(!messages.isEmpty()) { %>
+                        <span class="important-note important-note-rounded" data-messages='<%= Util.messagesToJson(messages).toJSONString() %>'>!</span>
+                    <% } %>
                     </td><%
                                 String parent = ri.getParent();
                                 if (parent == null) {
